--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -18,6 +18,7 @@
                 android:id="@+id/imagelist"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:scaleType="centerCrop"
                 tools:src="@mipmap/ic_launcher_round" />
 
             <LinearLayout
